End of user's swagger
